--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "barryvdh/laravel-dompdf": "^0.7.0",
         "h4cc/wkhtmltopdf-amd64": "0.12.x",
         "h4cc/wkhtmltoimage-amd64": "0.12.x",
-        "knplabs/knp-snappy": "^0.4.3"
+        "knplabs/knp-snappy": "^0.4.3",
+        "barryvdh/laravel-snappy": "^0.3.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
