--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "h4cc/wkhtmltopdf-amd64": "0.12.x",
         "h4cc/wkhtmltoimage-amd64": "0.12.x",
         "knplabs/knp-snappy": "^0.4.3",
-        "barryvdh/laravel-snappy": "^0.3.1"
+        "barryvdh/laravel-snappy": "^0.3.1",
+        "wemersonjanuaro/wkhtmltopdf-windows": "0.12.2.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
