--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "h4cc/wkhtmltoimage-amd64": "0.12.x",
         "knplabs/knp-snappy": "^0.4.3",
         "barryvdh/laravel-snappy": "^0.3.1",
-        "wemersonjanuaro/wkhtmltopdf-windows": "0.12.2.3"
+        "wemersonjanuaro/wkhtmltopdf-windows": "0.12.2.3",
+        "witty/laravel-db-backup": "dev-master"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
